# kafka_rust_chat

./: README.md
chat_frontend/: package-lock.json  package.json
chat_frontend/app/: globals.css  page.tsx
kafka_rust_chat_backend/: Cargo.toml
kafka_rust_chat_backend/src/: main.rs
